[gd_scene load_steps=10 format=2]

[ext_resource path="res://rooms/levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/Game.gd" type="Script" id=3]
[ext_resource path="res://objects/items/LevelGoal.tscn" type="PackedScene" id=4]
[ext_resource path="res://rooms/GameInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/goal.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/laser4.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/reset.wav" type="AudioStream" id=8]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=9]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="LevelGoalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="FloatBulletAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="ResetFloatBulletAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 0.75

[node name="ResetLevelAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Level" type="Node2D" parent="."]
pause_mode = 1

[node name="Level1" parent="Level" instance=ExtResource( 1 )]

[node name="Bullets" type="Node2D" parent="."]
pause_mode = 1

[node name="LevelGoal" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 105, 189 )

[node name="Player" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 336, 210 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameInterface" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 9 )]
pause_mode = 2
[connection signal="body_entered" from="LevelGoal" to="." method="_on_LevelGoal_body_entered"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/CenterContainer/VBoxContainer/ButtonsContainer/ResumeButton" to="." method="_on_PauseMenuResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/CenterContainer/VBoxContainer/ButtonsContainer/MenuButton" to="." method="_on_PauseMenuMenuButton_pressed"]

[editable path="CanvasLayer/PauseMenu"]
